<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="@string/synchronization">

    <ListPreference
            android:defaultValue="1"
            android:title="@string/check_for_updates" android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values" android:key="pref_sync_freq"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_sync_only_wifi" android:title="@string/only_on_wifi"/>
    <SwitchPreference
            android:defaultValue="false"
            android:title="@string/include_mobile_hotspots" android:key="pref_sync_hotspots"
            android:summary="@string/may_result_data_charges"/>
    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/only_when_charging" android:key="pref_sync_only_charging"/>
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/image_loading">

    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/only_on_wifi" android:key="pref_img_only_wifi"/>
    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/include_mobile_hotspots" android:key="pref_img_hotspots"
        android:summary="@string/may_result_data_charges"/>
  </PreferenceCategory>
</PreferenceScreen>
