<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015 Jonas Kalderstam.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  ~ General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.FeedActivity">
  <item
    android:id="@+id/action_open_enclosure"
    android:icon="@drawable/ic_play_circle_outline_white_24dp"
    android:title="@string/open_enclosed_media"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_fetch_article"
    android:icon="@drawable/ic_fetch_article_24dp"
    android:title="@string/fetch_full_article"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_open_in_webview"
    android:icon="@drawable/ic_web_white_24dp"
    android:title="@string/open_in_web_view"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_open_in_browser"
    android:icon="@drawable/ic_open_in_browser_white_24dp"
    android:title="@string/open_in_browser"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_share"
    android:icon="@drawable/ic_share_white_24dp"
    android:title="@string/share"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_mark_as_unread"
    android:title="@string/mark_as_unread"
    app:showAsAction="never" />
</menu>
