<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.ReaderWebViewActivity">
  <item
    android:id="@+id/action_toggle_javascript"
    android:checkable="true"
    android:checked="true"
    android:orderInCategory="1"
    android:title="@string/javascript"
    app:showAsAction="never" />
  <item
    android:id="@+id/action_open_enclosure"
    android:icon="@drawable/ic_play_circle_outline_white_24dp"
    android:title="@string/open_enclosed_media"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_open_in_browser"
    android:icon="@drawable/ic_open_in_browser_white_24dp"
    android:title="@string/open_link_in_browser"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_share"
    android:icon="@drawable/ic_share_white_24dp"
    android:title="@string/share"
    app:showAsAction="ifRoom" />
</menu>
