<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.FeedActivity">
    <item
        android:id="@+id/action_open_enclosure"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_av_play_circle_outline"
        android:title="@string/open_enclosed_media" />
    <item
        android:id="@+id/action_open_in_browser"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_location_web_site"
        android:title="@string/open_link_in_browser" />
    <item
        android:id="@+id/action_toggle_unread"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_visibility"
        android:title="@string/toggle_read_status" />
</menu>
