<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@android:id/empty"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.EmptyView"
        android:text="@string/empty_feed_top"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/empty_open_feeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.EmptyView"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/empty_feed_open"
        android:gravity="center"/>

    <TextView
        android:id="@+id/empty_add_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.EmptyView"
        android:text="@string/empty_feed_add"
        android:background="?android:selectableItemBackground"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center"/>
</LinearLayout>